# chad

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/chad/: chad.py  main.py
src/chad/utils/: array.py  chad.py  config.py  cookie.py  directory.py  file.py  general.py  grep.py  proxy.py  validate.py
src/chad_extractor/: chad_extractor.py  main.py
src/chad_extractor/utils/: array.py  config.py  directory.py  extractor.py  file.py  general.py  grep.py  input.py  jquery.py  report.py  result.py  storage.py  template.py  url.py  validate.py
src/dorks/: social_media_dorks.txt
src/templates/: social_media_template.json
