[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google-chad"
version = "5.7"
authors = [{ name = "Ivan Sincek" }]
description = "Not another Google Dorking tool."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = ["asyncio>=3.4.3", "colorama>=0.4.6", "datetime>=5.0", "nagooglesearch>=6.9", "playwright>=1.40.0", "regex>=2022.4.24", "requests>=2.27.1", "termcolor>=1.1.0"]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/chad"

[project.scripts]
chad = "chad.chad:main"
chad-extractor = "chad_extractor.chad_extractor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["dorks/*.txt", "templates/*.json"]
